The reference UI, plus a LOT of necessary API updates
This has a lot of data in it, to match what a living UI needs, largely exposed by the reference UI and testing.
